Fix broken URL in Challenge Questions TOC

--- a/_data/sitemap.yml
+++ b/_data/sitemap.yml
@@ -106,5 +106,5 @@ contents:
   url: questions.html
   blurb: "This final chapter is a collection of miscellaneous challenge questions."
   sections:
-  - name: Dates and Times
-    url: "#date_time"
+  - name: Dataset
+    url: "#dataset"
