fix spanish version

--- a/_data/es_sitemap.yml
+++ b/_data/es_sitemap.yml
@@ -1,5 +1,5 @@
 contents:
-  - title: Front Matter
+  - title: Información general
     url: frontmatter.html
     blurb: "Los fundamentos filosóficos y técnicos de este proyecto."
     sections:
